applications/hello-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: faelivrinx/hello-app
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8787
              name: jvm-debug
