applications/hello-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
spec:
  selector:
    app: hello-app
  ports:
    - port: 8080
      targetPort: 8080
      name: default
    - port: 8787
      targetPort: 8787
      name: debug
  type: LoadBalancer
