applications/hello-app/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESS"
    nginx.ingress.kubernetes.io/session-cookie-expires: "10"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "10"
    nginx.ingress.kubernetes.io/session-cookie-path: /
spec:
  rules:
    - host: hello.org
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-app
              servicePort: 8080
